--- a/slides.tex
+++ b/slides.tex
@@ -471,6 +471,12 @@ G_m \le 2R_m(\cF) + \sqrt{\frac{2\log(1/\delta)}{m}}.
 	\item PAC-Bayesian
 \end{itemize}
 \end{frame}
+
+\begin{frame}
+\centering
+{\large  Uniform Convergence}
+\end{frame}
+
 \begin{frame}{Paper I: }
 \emph{Understanding deep learning requires rethinking generalization};\\
 
